<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/_240sdp"
    android:layout_height="@dimen/_315sdp"
    android:background="@drawable/dialog_background_gradient"
    android:padding="@dimen/_10sdp"
    >

  <androidx.appcompat.widget.AppCompatImageView
      android:id="@+id/close"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="?selectableItemBackgroundBorderless"
      android:padding="@dimen/_5sdp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/ic_cancel_white_24dp"
      />

  <com.airbnb.lottie.LottieAnimationView
      android:id="@+id/animation_view"
      android:layout_width="@dimen/_100sdp"
      android:layout_height="@dimen/_100sdp"
      android:layout_marginTop="@dimen/_50sdp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:lottie_autoPlay="true"
      app:lottie_loop="true"
      app:lottie_rawRes="@raw/poker_face"
      />

  <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/no_internet"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/_20sdp"
      android:ellipsize="end"
      android:gravity="center"
      android:maxLines="1"
      android:text="@string/no_internet_title"
      android:textAllCaps="true"
      android:textColor="@android:color/white"
      android:textSize="@dimen/_18sdp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/animation_view"
      />

  <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/no_internet_body"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/_3sdp"
      android:alpha="0.8"
      android:ellipsize="end"
      android:gravity="center_horizontal"
      android:maxLines="2"
      android:text="@string/no_internet_body"
      android:textColor="@android:color/white"
      android:textSize="@dimen/_12sdp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/no_internet"
      />

  <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/turn_on"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/_30sdp"
      android:alpha="0.8"
      android:ellipsize="end"
      android:gravity="center_horizontal"
      android:maxLines="1"
      android:paddingBottom="@dimen/_5sdp"
      android:text="@string/turn_on"
      android:textAllCaps="true"
      android:textColor="@android:color/white"
      android:textSize="@dimen/_10sdp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/no_internet_body"
      />

  <com.google.android.material.button.MaterialButton
      android:id="@+id/wifi_on"
      android:layout_width="@dimen/_100sdp"
      android:layout_height="@dimen/_28sdp"
      android:drawableStart="@drawable/ic_wifi_white"
      android:text="@string/wifi_on"
      android:textAllCaps="false"
      android:textColor="@android:color/white"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/turn_on"
      style="@style/roundedButton"
      />

  <com.google.android.material.button.MaterialButton
      android:id="@+id/mobile_on"
      android:layout_width="@dimen/_100sdp"
      android:layout_height="@dimen/_28sdp"
      android:drawableStart="@drawable/ic_4g_white"
      android:text="@string/mobile"
      android:textAllCaps="false"
      android:textColor="@android:color/white"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/turn_on"
      style="@style/roundedButton"
      />

  <com.google.android.material.button.MaterialButton
      android:id="@+id/airplane_off"
      android:layout_width="match_parent"
      android:layout_height="@dimen/_28sdp"
      android:drawableStart="@drawable/ic_airplane_off"
      android:text="@string/airplane"
      android:textAllCaps="false"
      android:textColor="@android:color/white"
      android:visibility="gone"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/turn_on"
      style="@style/roundedButton"
      />
</androidx.constraintlayout.widget.ConstraintLayout>